--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -290,3 +290,45 @@ a {
   visibility: hidden;
 }
 /* END - LOADER */
+
+/* START - CURSOR CSS */
+.cursor {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  border: 1px solid black;
+  transition: all 200ms ease-out;
+  position: fixed;
+  pointer-events: none;
+  left: 0;
+  top: 0;
+  transform: translate(calc(-50% + 15px), -50%);
+  z-index: 10000;
+}
+
+.cursor2 {
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  background-color: black;
+  opacity: 0.3;
+  position: fixed;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  transition: width 0.3s, height 0.3s, opacity 0.3s;
+  z-index: 10000;
+}
+
+.hover {
+  background-color: gray;
+  opacity: 0.5;
+  z-index: 10000;
+}
+
+.cursorinnerhover {
+  width: 50px;
+  height: 50px;
+  opacity: 0.5;
+  z-index: 10000;
+}
+/* END - CURSOR CSS */
