--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -346,3 +346,15 @@ a {
   z-index: 10000;
 }
 /* END - CURSOR CSS */
+
+.icon-hidden {
+  display: none;
+}
+@media only screen and (max-width: 600px) {
+  .container-icon-mail {
+    display: none;
+  }
+  .icon-hidden {
+    display: block;
+  }
+}
